Scale intrinsic for different img size in triangulate

--- a/notebooks/triangulate.ipynb
+++ b/notebooks/triangulate.ipynb
@@ -17,25 +17,22 @@
    ],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import cv2\n",
-    "from tqdm import tqdm\n",
-    "import shutil, os\n",
     "import open3d as o3d\n",
     "from open3d import core as o3c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load calib results\n",
     "proj_mtx =  np.load('../data/proj_mtx.npy', )\n",
     "proj_dist = np.load('../data/proj_dist.npy', )\n",
-    "cam_mtx =   np.load('../data/cam_mtx.npy', )\n",
-    "cam_dist =  np.load('../data/cam_dist.npy')\n",
+    "cam_mtx =   np.load('../data/calib_results/cam_mtx.npy', )\n",
+    "cam_dist =  np.load('../data/calib_results/cam_dist.npy')\n",
     "proj_R =    np.load('../data/R.npy')\n",
     "proj_T =    np.load('../data/T.npy')\n",
     "R1 =        np.load('../data/R1.npy')\n",
@@ -43,35 +40,38 @@
     "P1 =        np.load('../data/P1.npy')\n",
     "P2 =        np.load('../data/P2.npy')\n",
     "\n",
-    "proj_w, proj_h = (1920, 1080)\n",
+    "proj_w, proj_h = (1280, 720)\n",
+    "calib_proj_w, calib_proj_h = (1920, 1080)\n",
+    "\n",
     "cam_w, cam_h = (1920, 1080)\n",
-    "scale_x = 1920 / proj_w\n",
-    "scale_y = 1080 / proj_h\n",
+    "scale_x = proj_w / calib_proj_w\n",
+    "scale_y = proj_h / calib_proj_h\n",
     "proj_mtx[0, :] = proj_mtx[0, :] * scale_x\n",
     "proj_mtx[1, :] = proj_mtx[1, :] * scale_y\n",
     "\n",
-    "base_path = '../data/recordings/record_0/'\n",
+    "base_path = '../data/recordings/bouda_720/'\n",
     "h_pixels = np.load(base_path+'h_pixels.npy')\n",
     "v_pixels = np.load(base_path+'v_pixels.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "cam_pts = []\n",
     "proj_pts = []\n",
     "colors = []\n",
-    "# Extract color\n",
+    "\n",
+    "# Get white image to extract colors\n",
     "img_white = cv2.imread(base_path + '/frame_1.jpg', cv2.IMREAD_COLOR)\n",
     "img_white = cv2.cvtColor(img_white, cv2.COLOR_BGR2RGB)\n",
     "\n",
-    "for i in range(500, 1300):\n",
-    "    for j in range(200, 800):\n",
-    "# for i in range(1920):\n",
-    "#     for j in range(1080):\n",
+    "for i in range(750, 1000):\n",
+    "    for j in range(400, 800):\n",
+    "# for i in range(cam_w):\n",
+    "#     for j in range(cam_h):\n",
     "        h_value = h_pixels[j, i]\n",
     "        v_value = v_pixels[j, i]\n",
     "        if h_value == -1 or v_value == -1:\n",
@@ -89,12 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# newcameramtx, roi = cv2.getOptimalNewCameraMatrix(cam_mtx, cam_dist, (800,600), 1, (800,600))\n",
-    "# newprojmtx, roi = cv2.getOptimalNewCameraMatrix(proj_mtx, proj_dist, (1920,1080), 1, (1920,1080))\n",
+    "# newcameramtx, roi = cv2.getOptimalNewCameraMatrix(cam_mtx, cam_dist, (1920,1080), 1, (1920,1080))\n",
+    "# newprojmtx, roi = cv2.getOptimalNewCameraMatrix(proj_mtx, proj_dist, (1920,1080), 1, (1280,720))\n",
     "# cam_pts_homo = cv2.undistortPoints(np.expand_dims(cam_pts, axis=1), cam_mtx, cam_dist, None, newcameramtx)\n",
     "# proj_pts_homo = cv2.undistortPoints(np.expand_dims(proj_pts, axis=1), proj_mtx, proj_dist, None, newprojmtx)\n",
     "\n",
@@ -113,14 +113,16 @@
     "P_len = TLen*np.sin(beta)/np.sin(gamma)\n",
     "Pts = NormedL*P_len\n",
     "\n",
-    "\n",
     "colors_array = np.array(colors).astype(np.float64)/255.0\n",
     "\n",
     "pcd = o3d.t.geometry.PointCloud(o3c.Tensor(Pts.T, o3c.float32))\n",
     "pcd = pcd.to_legacy()\n",
     "pcd.colors = o3d.cpu.pybind.utility.Vector3dVector(colors_array)\n",
     "\n",
-    "o3d.visualization.draw_geometries([pcd])"
+    "o3d.visualization.draw_geometries([pcd], zoom=0.45999999999999974,\n",
+    "                                  front=[ -0.54775242945121028, -0.15624350092055739, -0.82192167780779746 ],\n",
+    "                                  lookat=[ 0.30860175937414169, 0.14094289019703865, 0.47711528837680817 ],\n",
+    "                                  up=[ 0.0089500924594270986, -0.9834453515238939, 0.18098380151552931 ])\n"
    ]
   }
  ],
