Calibrate with 1440p camera

--- a/notebooks/test_proj_calib.ipynb
+++ b/notebooks/test_proj_calib.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,8 @@
     "\n",
     "\n",
     "    if init_param:\n",
-    "        w_cam = 1920\n",
-    "        h_cam = 1080\n",
+    "        w_cam = 2560\n",
+    "        h_cam = 1440\n",
     "        w_proj = 1920\n",
     "        h_proj = 1080\n",
     "        # Find the coordinate of the origin\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,8 +171,6 @@
     "nb_row = 11\n",
     "circle_r = 15\n",
     "default_x, default_y = (800, 350)\n",
-    "circle_r_board = 0.007\n",
-    "default_x_board, default_y_board = (-0.18, 0.04)\n",
     "\n",
     "circle_2d_pts = build_circle_grid_pts(nb_col, nb_row, circle_r)\n",
     "circle_2d = circle_2d_pts + [default_x, default_y]"
@@ -180,64 +178,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get previous calibration data for the camera\n",
-    "cam_mtx = np.load('../data/cam_mtx.npy')\n",
-    "cam_dist = np.load('../data/cam_dist.npy')\n",
+    "cam_mtx = np.load('../data/calib_results/cam_1440/cam_mtx.npy')\n",
+    "cam_dist = np.load('../data/calib_results/cam_1440/cam_dist.npy')\n",
     "\n",
     "# Get previous calibration data for the projector\n",
-    "proj_mtx = np.load('../data/proj_mtx.npy')\n",
-    "proj_dist = np.load('../data/proj_dist.npy')"
+    "proj_mtx = np.load('../data/calib_results/bouda/proj_mtx.npy')\n",
+    "proj_dist = np.load('../data/calib_results/bouda/proj_dist.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bad image: ../data/CalibrationImgs/projector\\calibrate_3.jpg\n",
+      "Bad image: ../data/CalibrationImgs/projector\\calibrate_4.jpg\n",
       "Prev cam calibration\n",
-      "[[1.27623665e+03 0.00000000e+00 9.67109208e+02]\n",
-      " [0.00000000e+00 1.27623665e+03 5.22660615e+02]\n",
+      "[[1.79946948e+03 0.00000000e+00 1.24651948e+03]\n",
+      " [0.00000000e+00 1.79946948e+03 6.80329064e+02]\n",
       " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "Camera calibration\n",
-      "[[1.27623647e+03 0.00000000e+00 9.67109552e+02]\n",
-      " [0.00000000e+00 1.27623634e+03 5.22660107e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "[[-3.73443278e-02 -1.07486192e-01 -7.57505719e-05  1.22861409e-03\n",
-      "   2.46270368e-02]]\n",
-      "Error 6.903923849023449e-06\n",
-      "\n",
-      "Projector calibration\n",
-      "[[2.81673279e+03 0.00000000e+00 9.73701352e+02]\n",
-      " [0.00000000e+00 2.70008946e+03 3.25711969e+02]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "ERROR 0.5148424114673742\n",
       "\n",
       "Stereo calibration\n",
       "Camera parameters\n",
-      "[[1.27623647e+03 0.00000000e+00 9.67109552e+02]\n",
-      " [0.00000000e+00 1.27623634e+03 5.22660107e+02]\n",
+      "[[1.79946948e+03 0.00000000e+00 1.24651948e+03]\n",
+      " [0.00000000e+00 1.79946948e+03 6.80329064e+02]\n",
       " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
       "Projector parameters\n",
-      "[[2.81673279e+03 0.00000000e+00 9.73701352e+02]\n",
-      " [0.00000000e+00 2.70008946e+03 3.25711969e+02]\n",
+      "[[2.64886466e+03 0.00000000e+00 5.43349681e+02]\n",
+      " [0.00000000e+00 2.40034268e+03 2.72175738e+02]\n",
       " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
       "Rotation and translation\n",
-      "[[ 0.98752672  0.0210204   0.15604206]\n",
-      " [-0.03914244  0.99271065  0.11398873]\n",
-      " [-0.15250853 -0.11867478  0.98115108]]\n",
-      "[[-0.26873865]\n",
-      " [-0.0281812 ]\n",
-      " [ 0.03781936]]\n",
-      "ERROR 3.0091224841935413\n"
+      "[[ 0.89808438  0.18955246  0.39688073]\n",
+      " [-0.25342245  0.96053117  0.11470371]\n",
+      " [-0.35947394 -0.2035921   0.91067488]]\n",
+      "[[-0.09952622]\n",
+      " [ 0.15673098]\n",
+      " [ 0.53946335]]\n",
+      "ERROR 26.52514383292536\n"
      ]
     }
    ],
@@ -273,25 +258,25 @@
     "\n",
     "board_pts = np.array(board_pts).astype('float32')\n",
     "world_pts = np.array(world_pts).astype('float32')\n",
-    "print('Camera calibration')\n",
-    "ret, cam_mtx, cam_dist, cam_rvecs, cam_tvecs = cv2.calibrateCamera(board_pts, cam_circle_pts, (1920,1080), None, None)\n",
-    "print(cam_mtx)\n",
-    "print(cam_dist)\n",
-    "print('Error', ret)\n",
-    "flags = (cv2.CALIB_USE_INTRINSIC_GUESS )\n",
+    "# print('Camera calibration')\n",
+    "# ret, cam_mtx, cam_dist, cam_rvecs, cam_tvecs = cv2.calibrateCamera(board_pts, cam_circle_pts, (1920,1080), None, None)\n",
+    "# print(cam_mtx)\n",
+    "# print(cam_dist)\n",
+    "# print('Error', ret)\n",
+    "# flags = (cv2.CALIB_USE_INTRINSIC_GUESS )\n",
     "\n",
-    "print('\\nProjector calibration')\n",
-    "dist_coef_proj = np.array([0.0, 0.0, 0.0, 0.0, 0.0],dtype=np.float32)\n",
-    "K_proj = np.array([[3000, 0, 1920/2.0],[0,3000,1080/2.0],[0,0,1]],dtype=np.float32)\n",
-    "#ret, proj_mtx, proj_dist, proj_rvecs, proj_tvecs = cv2.calibrateCamera(board_pts, proj_circle_pts, (1920,1080), K_proj, dist_coef_proj, flags =  cv2.CALIB_ZERO_TANGENT_DIST + cv2.CALIB_FIX_K1  + cv2.CALIB_FIX_K2 + cv2.CALIB_FIX_K3 + cv2.CALIB_FIX_K4 + cv2.CALIB_FIX_K5 + cv2.CALIB_FIX_K6)\n",
-    "#ret, proj_mtx, proj_dist, proj_rvecs, proj_tvecs = cv2.calibrateCamera(board_pts, proj_circle_pts, (1920,1080), K_proj, None, flags=cv2.CALIB_USE_INTRINSIC_GUESS)\n",
-    "ret, proj_mtx, proj_dist, proj_rvecs, proj_tvecs = cv2.calibrateCamera(board_pts, proj_circle_pts, (1920,1080), K_proj, None, flags=cv2.CALIB_USE_INTRINSIC_GUESS)\n",
-    "print(proj_mtx)\n",
-    "#print(proj_dist.T)\n",
-    "print('ERROR', ret)\n",
+    "# print('\\nProjector calibration')\n",
+    "# dist_coef_proj = np.array([0.0, 0.0, 0.0, 0.0, 0.0],dtype=np.float32)\n",
+    "# K_proj = np.array([[3000, 0, 1920/2.0],[0,3000,1080/2.0],[0,0,1]],dtype=np.float32)\n",
+    "# #ret, proj_mtx, proj_dist, proj_rvecs, proj_tvecs = cv2.calibrateCamera(board_pts, proj_circle_pts, (1920,1080), K_proj, dist_coef_proj, flags =  cv2.CALIB_ZERO_TANGENT_DIST + cv2.CALIB_FIX_K1  + cv2.CALIB_FIX_K2 + cv2.CALIB_FIX_K3 + cv2.CALIB_FIX_K4 + cv2.CALIB_FIX_K5 + cv2.CALIB_FIX_K6)\n",
+    "# #ret, proj_mtx, proj_dist, proj_rvecs, proj_tvecs = cv2.calibrateCamera(board_pts, proj_circle_pts, (1920,1080), K_proj, None, flags=cv2.CALIB_USE_INTRINSIC_GUESS)\n",
+    "# ret, proj_mtx, proj_dist, proj_rvecs, proj_tvecs = cv2.calibrateCamera(board_pts, proj_circle_pts, (1920,1080), K_proj, None, flags=cv2.CALIB_USE_INTRINSIC_GUESS)\n",
+    "# print(proj_mtx)\n",
+    "# #print(proj_dist.T)\n",
+    "# print('ERROR', ret)\n",
     "\n",
     "print('\\nStereo calibration')\n",
-    "error, cam_mtx, cam_dist, proj_mtx, proj_dist, proj_R, proj_T,_,_ = cv2.stereoCalibrate(world_pts, cam_circle_pts, proj_circle_pts, cam_mtx, cam_dist, proj_mtx, proj_dist, (1920,1080), flags= cv2.CALIB_FIX_INTRINSIC) #, flags=cv2.CALIB_USE_INTRINSIC_GUESS)#\n",
+    "error, cam_mtx, cam_dist, proj_mtx, proj_dist, proj_R, proj_T,_,_ = cv2.stereoCalibrate(world_pts, cam_circle_pts, proj_circle_pts, cam_mtx, cam_dist, proj_mtx, proj_dist, (2560,1440), flags= cv2.CALIB_FIX_INTRINSIC) #, flags=cv2.CALIB_USE_INTRINSIC_GUESS)#\n",
     "#error, cam_mtx, cam_dist, proj_mtx, proj_dist, proj_R, proj_T,_,_ = cv2.stereoCalibrate(obj_pts, cam_circle_pts, proj_circle_pts, cam_mtx, cam_dist, proj_mtx, proj_dist, (1920,1080), flags=cv2.CALIB_USE_INTRINSIC_GUESS) #, flags=cv2.)#\n",
     "print('Camera parameters')\n",
     "print(cam_mtx)\n",
@@ -304,16 +289,16 @@
     "print(proj_T)\n",
     "print('ERROR', error)\n",
     "\n",
-    "R1, R2, P1, P2, Q, _, _ = cv2.stereoRectify(cam_mtx, cam_dist, proj_mtx, proj_dist, (1920,1080), proj_R, proj_T)\n",
+    "# R1, R2, P1, P2, Q, _, _ = cv2.stereoRectify(cam_mtx, cam_dist, proj_mtx, proj_dist, (1920,1080), proj_R, proj_T)\n",
     "\n",
-    "np.save('../data/proj_mtx.npy', proj_mtx)\n",
-    "np.save('../data/proj_dist.npy', proj_dist)\n",
-    "np.save('../data/R.npy', proj_R)\n",
-    "np.save('../data/T.npy', proj_T)\n",
-    "np.save('../data/R1.npy', R1)\n",
-    "np.save('../data/R2.npy', R2)\n",
-    "np.save('../data/P1.npy', P1)\n",
-    "np.save('../data/P2.npy', P2)"
+    "# np.save('../data/proj_mtx.npy', proj_mtx)\n",
+    "# np.save('../data/proj_dist.npy', proj_dist)\n",
+    "# np.save('../data/R.npy', proj_R)\n",
+    "# np.save('../data/T.npy', proj_T)\n",
+    "# np.save('../data/R1.npy', R1)\n",
+    "# np.save('../data/R2.npy', R2)\n",
+    "# np.save('../data/P1.npy', P1)\n",
+    "# np.save('../data/P2.npy', P2)"
    ]
   },
   {
