--- a/notebooks/triangulate.ipynb
+++ b/notebooks/triangulate.ipynb
@@ -24,15 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load calib results\n",
-    "proj_mtx =  np.load('../data/proj_mtx.npy', )\n",
-    "proj_dist = np.load('../data/proj_dist.npy', )\n",
-    "cam_mtx =   np.load('../data/calib_results/cam_mtx.npy', )\n",
-    "cam_dist =  np.load('../data/calib_results/cam_dist.npy')\n",
+    "proj_mtx =  np.load('../data/calib_results/bouda/proj_mtx.npy', )\n",
+    "proj_dist = np.load('../data/calib_results/bouda/proj_dist.npy', )\n",
+    "cam_mtx =   np.load('../data/calib_results/cam_1440/cam_mtx.npy', )\n",
+    "cam_dist =  np.load('../data/calib_results/cam_1440/cam_dist.npy')\n",
     "proj_R =    np.load('../data/R.npy')\n",
     "proj_T =    np.load('../data/T.npy')\n",
     "R1 =        np.load('../data/R1.npy')\n",
@@ -43,20 +43,20 @@
     "proj_w, proj_h = (1280, 720)\n",
     "calib_proj_w, calib_proj_h = (1920, 1080)\n",
     "\n",
-    "cam_w, cam_h = (1920, 1080)\n",
+    "cam_w, cam_h = (2560, 1440)\n",
     "scale_x = proj_w / calib_proj_w\n",
     "scale_y = proj_h / calib_proj_h\n",
     "proj_mtx[0, :] = proj_mtx[0, :] * scale_x\n",
     "proj_mtx[1, :] = proj_mtx[1, :] * scale_y\n",
     "\n",
-    "base_path = '../data/recordings/bouda_720/'\n",
+    "base_path = '../data/recordings/elephant_800/'\n",
     "h_pixels = np.load(base_path+'h_pixels.npy')\n",
     "v_pixels = np.load(base_path+'v_pixels.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +68,8 @@
     "img_white = cv2.imread(base_path + '/frame_1.jpg', cv2.IMREAD_COLOR)\n",
     "img_white = cv2.cvtColor(img_white, cv2.COLOR_BGR2RGB)\n",
     "\n",
-    "for i in range(750, 1000):\n",
-    "    for j in range(400, 800):\n",
+    "for i in range(1000, 1700):\n",
+    "    for j in range(400, 1000):\n",
     "# for i in range(cam_w):\n",
     "#     for j in range(cam_h):\n",
     "        h_value = h_pixels[j, i]\n",
@@ -115,15 +115,27 @@
     "\n",
     "colors_array = np.array(colors).astype(np.float64)/255.0\n",
     "\n",
-    "pcd = o3d.t.geometry.PointCloud(o3c.Tensor(Pts.T, o3c.float32))\n",
-    "pcd = pcd.to_legacy()\n",
-    "pcd.colors = o3d.cpu.pybind.utility.Vector3dVector(colors_array)\n",
+    "filter = (Pts[2] < 1.5) & (Pts[2] > -0.5)\n",
+    "Pts_filtered = Pts[:, filter]\n",
     "\n",
-    "o3d.visualization.draw_geometries([pcd], zoom=0.45999999999999974,\n",
-    "                                  front=[ -0.54775242945121028, -0.15624350092055739, -0.82192167780779746 ],\n",
-    "                                  lookat=[ 0.30860175937414169, 0.14094289019703865, 0.47711528837680817 ],\n",
-    "                                  up=[ 0.0089500924594270986, -0.9834453515238939, 0.18098380151552931 ])\n"
+    "pcd = o3d.t.geometry.PointCloud(o3c.Tensor(Pts[:, filter].T, o3c.float32))\n",
+    "pcd = pcd.to_legacy()\n",
+    "pcd.colors = o3d.cpu.pybind.utility.Vector3dVector(colors_array[filter])\n",
+    "\n",
+    "o3d.visualization.draw_geometries([pcd])\n",
+    "# For bouda\n",
+    "# o3d.visualization.draw_geometries([pcd], zoom=0.45999999999999974,\n",
+    "#                                   front=[ -0.54775242945121028, -0.15624350092055739, -0.82192167780779746 ],\n",
+    "#                                   lookat=[ 0.30860175937414169, 0.14094289019703865, 0.47711528837680817 ],\n",
+    "#                                   up=[ 0.0089500924594270986, -0.9834453515238939, 0.18098380151552931 ])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
