--- a/notebooks/triangulate.ipynb
+++ b/notebooks/triangulate.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,14 +49,14 @@
     "proj_mtx[0, :] = proj_mtx[0, :] * scale_x\n",
     "proj_mtx[1, :] = proj_mtx[1, :] * scale_y\n",
     "\n",
-    "base_path = '../data/recordings/elephant_800/'\n",
+    "base_path = '../data/recordings/groot/'\n",
     "h_pixels = np.load(base_path+'h_pixels.npy')\n",
     "v_pixels = np.load(base_path+'v_pixels.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
